--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<div id="intro">
 						<h1>Aurelio Naufal Effendy Portfolio<br />
 						</h1>
-						<p>Data enthusiast proficient in  Python, R, Excel and SQL with hands-on experience in data manipulation, statistical analysis, and visualization.
+						<p>Data enthusiast proficient in  Python, R, Excel and SQL with hands-on experience in data manipulation, machine learning modelling, statistical analysis, and visualization.
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
