--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
 					<div id="intro">
 						<h1>Aurelio Naufal Effendy Portfolio<br />
 						</h1>
-						<p>Data enthusiast proficient in  Python, R, Excel and SQL with hands-on experience in data manipulation, machine learning modelling, statistical analysis, and visualization.
+						<h3>AI | Machine Learning | Statistical Analysis | Data Analytics | Natural Language Processing</h3>
+						<a href="#" class="image main"><img src="images/bigdata_Carloscastilla-AlamyStockPhoto.webp" alt="" /></a>
+						<p>Data enthusiast proficient in  Python, R, Excel and SQL with hands-on experience in data manipulation, statistical analysis, and visualization.
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -51,20 +53,45 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<span class="date">October, 2024</span>
-									<h2><a href="#">Skin Cancer Detection App Prototype<br />
+									<span class="date">May, 2025</span>
+									<h2><a href="#">Commodity Price Forecasting with PatchTST & N-HiTS<br />
 									</a></h2>
-									<p>Collaborated with a diverse team from backgrounds in health, business, and technology, we developed a prototype of a skin cancer detection app capable of identifying over 13 cancer types and other skin conditions.</p>
+									
 								</header>
-								<a href="#" class="image main"><img src="images/SkinScan1.png" alt="" /></a>
-								<a href="#" class="image main"><img src="images/SkinScan2.png" alt="" /></a>
+								<a href="#" class="image main"><img src="images/Komoditas2.jpeg" alt="" /></a>
+								<p>In the preliminary round of  Datavidia 9.0 (Data Science Competition), my team and I worked on forecasting daily prices of 13 food commodities across 34 provinces in Indonesia.
+										We implemented two state-of-the-art models using the NeuralForecast library: PatchTST, a Transformer-based model that learns local and long-range patterns via patching, and N-HiTS, an MLP-based model designed to capture seasonal trends using hierarchical interpolation and multi-scale sampling. To provide important context, we scraped Indonesian national holiday data and added features like whether a date is a holiday, or falls before or after one, helping the models detect price spikes during periods like Ramadan.
+										After minimal preprocessing, including removing corrupted July 2022 data and handling the rest of the missing values based on province/commodity, we trained each model on the entire dataset in under 1 minute for N-HiTS and under 3 minutes for PatchTST. We used rolling forecasting with MAPE to evaluate performance and applied a best-fit strategy, selecting the better-performing model per province-commodity pair. This approach led to a final validation MAPE of 0.0694, and we achieved a private leaderboard score of 0.04546.
+								</p>
 								<ul class="actions special">
-									<li><a href="https://github.com/Aurelio-Naufal/skin-lesion2" class="button large">View Project</a></li>
+									<li><a href="https://github.com/RifqiHafizuddin/datavidia-9" class="button large">View Project</a></li>
 								</ul>
 							</article>
 
 						<!-- Posts -->
+
 							<section class="posts">
+								<article>
+									<header>
+										<span class="date">May, 2025</span>
+										<h2><a href="#">Predictive Analysis for Trouble Tickets at PT Tower Bersama Infrastructure Group<br />
+										</a></h2>
+									</header>
+									<a href="#" class="image fit"><img src="images/TowerTBG.jpg" alt="" /></a>
+									<p>During my internship as a Network Operation Center Analyst at PT Tower Bersama Infrastructure Group, I was tasked with analyzing trouble ticket data from 2021 to 2025. The data consisted of various types of issues such as theft, community-related disturbances, and other tower-related problems. I visualized and explored the trends in these incidents, and conducted predictive analysis to assess whether trouble tickets were likely to increase in the future. To achieve this, I used panel regression with external socioeconomic and environmental factors, logistic regression, and time series forecasting. The analysis concluded with data-driven recommendations aimed at improving preventive strategies and operational response. </p>
+								</article>
+								<article>
+									<header>
+										<span class="date">October, 2024</span>
+										<h2><a href="#">Skin Cancer Detection App Prototype<br />
+										</a></h2>
+									</header>
+									<a href="#" class="image fit"><img src="images/SkinScan2.png" alt="" /></a>
+									<p>Collaborated with a diverse team from backgrounds in health, business, and technology, we developed a prototype of a skin cancer detection app capable of identifying over 13 cancer types and other skin conditions.</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/Aurelio-Naufal/skin-lesion2" class="button">View Project</a></li>
+									</ul>
+								</article>
 								<article>
 									<header>
 										<span class="date">November, 2024</span>
